--- a/Diagnostics/4 《呼吸系统症状体征》.md
+++ b/Diagnostics/4 《呼吸系统症状体征》.md
@@ -24,11 +24,12 @@
   - [3.6. 肺不张](#36-肺不张)
   - [3.7. 肺实变](#37-肺实变)
 
-
 ---
+
 # 1. 呼吸系统的症状
 
 ## 1.1. 咳嗽咳痰
+
 1. 病因
     - 呼吸道疾病
     - 胸膜疾病
@@ -59,6 +60,7 @@
     - 咳嗽伴随症状
 
 ## 1.2. 咳血
+
 1. 病因
     - 支气管疾病
     - 肺部疾病
@@ -85,6 +87,7 @@
     - 个人史
 
 ## 1.3. 胸痛
+
 1. 病因
     1. 胸壁疾病
     2. 心血管疾病
@@ -109,6 +112,7 @@
     3. 呼吸，心血管，消化疾病
 
 ## 1.4. 紫绀
+
 1. 病因
     1. 肺源性
     2. 心源性
@@ -123,6 +127,7 @@
     3. 发病诱因及病程
 
 ## 1.5. 呼吸困难
+
 1. 病因
     1. 呼吸系统疾病
     2. 循环系统疾病
@@ -150,10 +155,10 @@
     3. 与活动体位的关系
     4. 伴随症状
 
----
 # 2. 呼吸系统的体征
 
 ## 2.1. 视诊
+
 - 扁平胸
 - 桶状胸
 - 佝偻病胸
@@ -167,11 +172,13 @@
 - 呼吸节律
 
 ## 2.2. 触诊
+
 - 胸廓扩张度
 - 语音震颤
 - 胸膜摩擦感
 
 ## 2.3. 叩诊
+
 - 清音
 - 过清音
 - 鼓音
@@ -179,6 +186,7 @@
 - 浊音
 
 ## 2.4. 听诊
+
 1. 正常呼吸音:
     1. 气管呼吸音
     2. 支气管呼吸音
@@ -194,7 +202,6 @@
 4. 语音共振
 5. 胸膜摩擦音
 
----
 # 3. 常见疾病
 
 ## 3.1. 大叶性肺炎
@@ -205,20 +212,20 @@
 </center>
 
 1. 症状:
-    青壮年，多有诱因，==起病急骤==，常呈稽留热，有胸痛，呼吸急促，==咳嗽咳铁锈色痰==
+    - 青壮年，多有诱因，==起病急骤==，常呈稽留热，有胸痛，呼吸急促，==咳嗽咳铁锈色痰==
 	- 铁锈色痰——肺炎链球菌的明显的特点
 2. 体征
     1. 急性热病容，颜面潮红，鼻翼扇动，呼吸困难，发绀，脉率⬆
-		-  发热→呼吸急促→呼吸的效率低下→呼吸困难
+		- 发热→呼吸急促→呼吸的效率低下→呼吸困难
     2. 肺实变：呼吸运动减弱，语音震颤增强，叩诊呈浊音或实音，听诊可及支气管呼吸音，湿性啰音，累及胸膜时可闻及胸膜摩擦音
 3. 应该开具的检查：
 	1. 抽血——白血球、炎症指标等
 	2. 胸部影像的检查——CT/胸片都可以
 
----
 ## 3.2. 慢性阻塞性肺疾病
 
 ### 3.2.1. 肺气肿
+
 <center>
 
 ![pulmonaryEmphysema_CT](https://dsm04pap003files.storage.live.com/y4m83KNmifqsh-NoxZjf67KqI6FwOutgu8X8RzjstodBpRKUeWmLW3tVoSpmLMJSMU2AvPeqmUCXYG52xk2ItH-XXTtlPRi2gINO3YhcCHaWF_NKwwbp-K57YXqlWQeAIoXHPLi97s1bpoPdutgOcppMRVldPe5RiYLYzkD8CXHOeTPjgW-MIBk4nA2lvRTKZgJ?width=553&height=425&cropmode=none)
@@ -239,18 +246,20 @@
     3. 叩诊：两肺过清音，肺下界降低，肺下界移动度减少，心浊音界缩小，肝浊音界下移
     4. 听诊：肺泡呼吸音减弱，呼气延长，语音共振减弱，心音遥远
 
----
 ## 3.3. 支气管哮喘
+
 1. 症状
-   季节性发作，发作前常有诱因，接触过敏原。
+   - 季节性发作，发作前常有诱因，接触过敏原。
    喷嚏、流涕，咳嗽，胸闷，气促
 2. 体征
-   呼气性呼吸困难，呼吸运动变小，语音共振减弱，叩诊呈过清音(因为有气胸的症状)，两肺布满干啰音
+   - 呼气性呼吸困难，呼吸运动变小，语音共振减弱，叩诊呈过清音(因为有气胸的症状)，两肺布满干啰音
 
----
 ## 3.4. 胸腔积液
+
 ***胸膜壁层和脏层之间的液体***
+
 ><u>毛细血管内静水压增高，胶体渗透压降低，胸膜毛细血管壁通透性增加</u>
+>
 >300-500ml是少量的胸腔积液，==图中大概为2000ml==，严重的肿瘤的话一天可以有3000ml的胸腔积液产生
 
 <center>
@@ -293,7 +302,9 @@
         6. 皮肤凹陷性浮肿或合并有心包积液，腹水
 
 ## 3.5. —气胸
+
 ***任何原因使胸膜破裂，气体进入胸膜腔***
+
 1. 气胸类型
     1. 闭合性气胸
     2. 张力性气胸
@@ -305,7 +316,6 @@
 </center>
 
 >PS. CT中颜色加深，如图，这是一个90%的气胸
-
 
 2. 症状
     1. 胸痛，进行性呼吸困难，咳嗽
@@ -325,6 +335,7 @@
         5. 有慢性阻塞性肺疾病，肺大庖，哮喘
 
 ## 3.6. 肺不张
+
 1. 病因
     1. 阻塞性肺炎
     2. 外压性肺炎
