--- a/Diagnostics/3 《胸肺检查》.md
+++ b/Diagnostics/3 《胸肺检查》.md
@@ -1,5 +1,5 @@
 - [1. 胸部的体表标志](#1-胸部的体表标志)
-  - [1.1. 骨骼标志:](#11-骨骼标志)
+  - [1.1. 骨骼标志](#11-骨骼标志)
   - [1.2. 体表标志线](#12-体表标志线)
   - [1.3. 胸部分区: 7窝6区](#13-胸部分区-7窝6区)
   - [1.4. 肺和胸膜的界限](#14-肺和胸膜的界限)
@@ -16,16 +16,16 @@
 - [3. 肺和胸膜](#3-肺和胸膜)
   - [3.1. 视诊:](#31-视诊)
     - [3.1.1. 生理弯曲:](#311-生理弯曲)
-    - [3.1.2. 呼吸运动:](#312-呼吸运动)
+    - [3.1.2. 呼吸运动](#312-呼吸运动)
       - [3.1.2.1. 病理改变](#3121-病理改变)
       - [3.1.2.2. 呼吸困难的体位](#3122-呼吸困难的体位)
       - [3.1.2.3. 呼吸频率](#3123-呼吸频率)
       - [3.1.2.4. 呼吸节律](#3124-呼吸节律)
       - [3.1.2.5. 呼吸频率、深度、节律](#3125-呼吸频率深度节律)
-    - [3.1.3. 胸壁静脉:](#313-胸壁静脉)
+    - [3.1.3. 胸壁静脉](#313-胸壁静脉)
   - [3.2. 触诊](#32-触诊)
     - [3.2.1. 触诊的内容及临床意义](#321-触诊的内容及临床意义)
-      - [3.2.1.1. 胸廓扩张度:](#3211-胸廓扩张度)
+      - [3.2.1.1. 胸廓扩张度](#3211-胸廓扩张度)
       - [3.2.1.2. 语音震颤 (触觉语颤)](#3212-语音震颤-触觉语颤)
       - [3.2.1.3. 胸膜摩擦感](#3213-胸膜摩擦感)
   - [3.3. 叩诊](#33-叩诊)
@@ -53,11 +53,13 @@
 - 肋骨: 共12对。于背部与相应的胸椎相连, 由后上方向前下方倾斜, 其倾斜度上方略小, 下方稍大。
 
 > PS.
+> 
 > 部分人是11对肋
 
 - 腹上角: 为左右肋弓(由两侧的第7～10肋软骨相互连接而成)在胸骨下端会合处所形成的夹角, 又称胸骨下角, 相当于横膈的穹隆部。正常约70°～ll0°。
 
 > PS.
+> 
 > 胃疼的部位就是这里
 
 - 剑突: 为胸骨体下端的突出部分, 呈三角形, 其底部与胸骨体相连。
@@ -66,6 +68,7 @@
 - 肋脊角: 为第12肋骨与脊柱构成的夹角。其前为肾脏和输尿管上端所在的区域。
 
 > PS.
+> 
 > 如果==叩击痛==有考虑肾脏到输卵管的一段有结石或者病变
 
 ![anteriorChestWall](https://dsm04pap003files.storage.live.com/y4mjY4neXYNs1e92Cr9nCCNBYwDPt2bN0EiRDoUCWfd4t2WdXhyKn3jO47jqp9_qg9nmyLFbt4MMtE2mjJU17dHHZVuwn_XYK_K6xRwUa4awlM3Ow_uYJXRIxSY0W5BVpdXi8wVJEBxVmYv1YcyT-hb9SI_6XSKylAheY89Iw1n-XetccnQOIGhctQyGNYrRsIo?width=422&height=366&cropmode=none)
@@ -156,6 +159,7 @@
 ***两侧大致对称, 椭圆型。成年人胸廓的前后径较左右径为短, 比例约为1: 1.5。***
 
 > PS.
+> 
 > 1:2.0内都算是正常, 部分瘦的人比较大
 
 - 扁平胸——==比例偏大==
@@ -244,6 +248,7 @@
 - ==呼气性呼吸困难==: 常见于支气管哮喘和阻塞性肺气肿等下呼吸道阻塞患者, 因气流呼出不畅, 呼气时间延长。
 
 > PS.
+> 
 > 吸气困难——大气道；呼气困难——小气道 (2cm一下的小气道)***
 
 #### 3.1.2.2. 呼吸困难的体位
@@ -436,6 +441,7 @@
 ### 3.4.5. 胸膜摩擦音
 
 ***当胸膜面由于炎症, 纤维素渗出而变得粗糙时, 则随着呼吸便可出现胸膜摩擦音。其特征颇似用一手掩耳, 以另一手指在其手背上摩擦时所听到的声音。胸膜摩擦音通常于呼吸两相均可听到, 而且十分近耳, 一般于吸气末或呼气初较为明显, 屏气时即消失。深呼吸或在听诊器体件上加压时, 摩擦音的强度可增加。***
+
 <br/>
 
 ***胸膜摩擦音最常听到的部位是腋中线下侧胸壁。胸膜摩擦音可随体位的变动而消失或复现。常见于纤维素性胸膜炎、肺梗塞、胸膜肿瘤及尿毒症等患者。***
@@ -445,36 +451,36 @@
 ## 4.1. 大叶性肺炎
 
 1. 症状
-    多青壮年, 寒战、高热, 常为稽留热, 全身酸痛, 咳嗽、咳痰等。
+    - 多青壮年, 寒战、高热, 常为稽留热, 全身酸痛, 咳嗽、咳痰等。
 2. 体征
-    患者呈急性病容, 鼻翼扇动, 呼吸困难, 脉率增速, 常有口唇疱疹。充血期病变局部呼吸动度减弱, 语音震颤稍增强, 叩诊浊音, 并可听及捻发音。当发展为大叶实变时, 语音震颤明显增强, 叩诊为实音, 并可听到支气管呼吸音。如病变累及胸膜还可听及胸膜摩擦音。
+    - 患者呈急性病容, 鼻翼扇动, 呼吸困难, 脉率增速, 常有口唇疱疹。充血期病变局部呼吸动度减弱, 语音震颤稍增强, 叩诊浊音, 并可听及捻发音。当发展为大叶实变时, 语音震颤明显增强, 叩诊为实音, 并可听到支气管呼吸音。如病变累及胸膜还可听及胸膜摩擦音。
 
 ## 4.2. 慢性阻塞性肺病
 
 ***无法治愈, 只能缓解, 劳力型的运动性的进行性的呼吸困难*** 
 
 1. 症状
-    咳痰喘
+    - 咳痰喘
 2. 典型体征
-    望诊胸廓呈桶状, 双侧呼吸动度减弱。触诊语颤减弱。叩诊双肺过清音, 心界持续饿, 听诊双肺呼吸音减弱, 呼气延长, 心音减弱。
+    - 望诊胸廓呈桶状, 双侧呼吸动度减弱。触诊语颤减弱。叩诊双肺过清音, 心界持续饿, 听诊双肺呼吸音减弱, 呼气延长, 心音减弱。
 
 ## 4.3. 支气管哮喘
 
 1. 症状
-    多从儿时起, 出现反复发作性呼吸困难。
+    - 多从儿时起, 出现反复发作性呼吸困难。
 2. 体症
-    缓解期患者无明显体症。发作时出现严重呼气性呼吸困难, 患者端坐位, 呼吸辅助肌参与呼吸, 严重者大汗, 胸廓胀满, 吸气位, 叩诊过清音, 两肺满布干罗音, 语音共振减弱。
+    - 缓解期患者无明显体症。发作时出现严重呼气性呼吸困难, 患者端坐位, 呼吸辅助肌参与呼吸, 严重者大汗, 胸廓胀满, 吸气位, 叩诊过清音, 两肺满布干罗音, 语音共振减弱。
 
 ## 4.4. 胸腔积液
 
 1. 症状
-    胸痛, 刺激性咳嗽, 喜患侧卧位, 胸水多于500ml时, 可出现气短、胸闷、大量积液时可出现呼吸困难等。
+    - 胸痛, 刺激性咳嗽, 喜患侧卧位, 胸水多于500ml时, 可出现气短、胸闷、大量积液时可出现呼吸困难等。
 2. 体症
-    积液少无体症, 中至大量时可见呼吸浅快, 患侧呼吸运动受限, 肋间隙丰满, 心尖搏动及气管移位(*左侧*), 语音震颤和语音共振减弱或消失, 积液区浊音。
+    - 积液少无体症, 中至大量时可见呼吸浅快, 患侧呼吸运动受限, 肋间隙丰满, 心尖搏动及气管移位(*左侧*), 语音震颤和语音共振减弱或消失, 积液区浊音。
 
 ## 4.5. 气胸
 
 1. 症状
-    有诱因, 突然胸痛, 进行性呼吸困难, 不能平卧, 可有咳嗽, 严重者有伴烦躁不安, 大汗淋漓, 脉速, 发绀等。
+    - 有诱因, 突然胸痛, 进行性呼吸困难, 不能平卧, 可有咳嗽, 严重者有伴烦躁不安, 大汗淋漓, 脉速, 发绀等。
 2. 体征
-    少量积气, 无明显体征。量多时, 望诊患侧胸廓饱满, 肋间隙增宽, 呼吸运动减弱或消失。触诊气管移向健侧, 语颤减弱或消失。叩诊呈鼓音。听诊呼吸音减弱或消失。
+    - 少量积气, 无明显体征。量多时, 望诊患侧胸廓饱满, 肋间隙增宽, 呼吸运动减弱或消失。触诊气管移向健侧, 语颤减弱或消失。叩诊呈鼓音。听诊呼吸音减弱或消失。
