--- a/Diagnostics/3 《胸肺检查》.md
+++ b/Diagnostics/3 《胸肺检查》.md
@@ -436,7 +436,7 @@
 - 听觉语音是被查者用平时说话的声音发 "yi" "时, 用听诊器在胸部听到的柔和而模糊的声音。
 	- 要注意是否对称
 - 正常时在气管和大支气管附近听到的声音最强, 在肺底则较弱。
-- ==听觉语音减弱见于支气管阻塞、胸腔积液、胸膜增厚、胸壁水肿、肥胖及肺气肿等疾病。听觉语音增强见于肺实变、肺空洞等。==
+- ==听觉语音减弱见于支气管阻塞、胸腔积液、胸膜增厚、胸壁水肿、肥胖及肺气肿等疾病。听觉语音增强见于肺实变、肺空洞等==
 
 ### 3.4.5. 胸膜摩擦音
 
