--- a/Diagnostics/1 《绪论、问诊、基本检查法》.md
+++ b/Diagnostics/1 《绪论、问诊、基本检查法》.md
@@ -178,6 +178,7 @@
 - 疾病演变的==时间概念==要非常清晰
 
 > **！要按照顺序去问！**
+> 
 > **问诊的思维相比医学知识更重要**
 
 - 注意疾病发生的背景
@@ -190,12 +191,14 @@
   - 如患者近期发生车祸, 本次看病诉因车祸发生心绞痛, 医生不可在病史中写成 "车祸后心绞痛3个月", 稳妥的的表述应该是 "发作性胸痛3个月"。
   - 对于涉及职业病、伤害等与法律或者赔偿有关的情况, 应注意相关人员提供病史的真实性。不要不加分析记录在病历上。对关键病史的真实性表示怀疑又无从查证时, 可以添加引号或者记录叙述人姓名。
 
-故事例子: 
+故事例子:
 
 >马寅初夫人王仲贞 60 年代来协和就诊, 她得了奇怪的病症, 每次一感冒就发生休克, 她曾到多家医院求诊, 诊断不明。来到协和医院。
+>
 > 张孝骞教授一看到她就觉得似曾相识, 在询问病史的交谈过程中得知这位患者 30 年前临产大出血曾在协和医院抢救, 他把这段病史与患者目前的症状联系起来分析, 考虑为==席汉综合征==: 30年前的临产大出血, 引起脑垂体坏死导致功能减退, 造成甲状腺、肾上腺等激素分泌不足和应激反应的缺陷, 故患者受到应激感染时就会发生休克。激素测定结果出来后, 果然证实了他的推断。
 
 > ***PS***
+> 
 > 体重下降, 可能是天气变凉衣服穿的少捏, 不一定就是甲亢之类的问题
 
 <br/>
@@ -324,6 +327,7 @@
 ***是通过嗅觉来判断发自病人的异常气味与疾病之间关系的一种方法 。***
 
 > **e.g.**
+> 
 > **尿毒症 ； 有机磷中毒 ； 肝硬化**
 
 ## 3.2. 体检注意事项:
@@ -347,9 +351,9 @@
 
 # 4. 体征
 
-   - 关节红肿——无外伤史则怀疑痛风
-   - 颈静脉怒张——右心有问题 (血液无法回到心脏)
-   - 巩膜黄染
+- 关节红肿——无外伤史则怀疑痛风
+- 颈静脉怒张——右心有问题 (血液无法回到心脏)
+- 巩膜黄染
 
 # 5. 实验室检查 (laboratory examination)
 
@@ -380,13 +384,8 @@
 <br/>
 
 - **误诊误治、纠纷**
-
-A. 病史没问清楚、或患者隐瞒
-
-B. 体检功夫不够
-
-C. 辅助检查选择不当或诊断水平有限
-
-D. 医患沟通不够
-
-E. 记录缺陷
+  1. 病史没问清楚、或患者隐瞒
+  2. 体检功夫不够
+  3. 辅助检查选择不当或诊断水平有限
+  4. 医患沟通不够
+  5. 记录缺陷
