--- a/Human right and laws/CH09 人权中的平等.md
+++ b/Human right and laws/CH09 人权中的平等.md
@@ -144,12 +144,15 @@
 
 由平等的引申含义推导出了引申人权
 
+> i.e. 产假等的 **具体人权**
+
 # 3. 平等与差别待遇
 
 在现实社会中, 权利的分配往往有差别的, 存在着差别待遇
 
 - 古代社会的差别待遇
   - 例如中国古代的礼制
+    > 根据身份的不同, 有不同的礼制; 不同的身份的差别待遇
 - 现代社会的差别待遇
   - 例如妇女休产假的权利, 拒绝招收女工, 中国选举法修改前中的四分之一或八分之一条款问题, 同命不同价, 对困难地区和困难学生的资助, 高考加分等等
 
