--- a/Human right and laws/CH10 人权中的正义.md
+++ b/Human right and laws/CH10 人权中的正义.md
@@ -33,6 +33,10 @@
 
 **平等的基本含义** 是每个人都应当平等地享有实现其正当人性基本需求的权利. 
 
+> 中国古代: 不应给予不同身份, 德行的人分配相同的基本权力. 
+>
+> 功利主义者: 如何分配能更有助于社会的发展就如何分配 → 这个情况下一般的分配的结果时并不平等的.
+
 正义问题1: 基本权利应当如何分配?应平等分配给每个人吗?
 
 ---
@@ -43,17 +47,32 @@
 
 正义问题2:应否在制度上帮助弱势者行使基本权利?
 
+> 为什么要帮助弱势者实行基本权利?
+
 两种类型的弱势群体: 
 
 正义问题2.1: 应否帮助有能力而社会经济条件较差的人发挥其能力?
 
+- A: 机会公平平等原则
+
 正义问题2.2: 应否帮助没有能力, 社会经济条件也较差的人获得基本的生活保障?
+
+- A: 差异原则
+
+|  | 能力 | 经济条件 |
+| --- | --- | --- |
+| 第一种弱势群体 | √ | **×** |
+| 第二种弱势群体 | × | **×** |
 
 ### 1.1.2. 平等与自由的冲突
 
 正义的问题: 平等与自由的冲突如何调处?
 
 这一冲突主要表现为平等的引申含义与自由的冲突. 当推进平等, 可能会妨碍自由. 
+
+> 形式平等一般不会与自由发生冲突; 实际平等一般会与自由发生冲突. 
+>
+> i.e. 实际平等必然需要国家对弱势群体提供帮助, say, 转移支付: 对富人征收重税
 
 ## 1.2. 基本权利如何分配?
 
@@ -89,16 +108,44 @@
 
 ### 2.1.1. 一般的正义观
 
+> 抽象的, 更具有根本性的正义观.
+
 所有的社会基本价值──自由和机会, 收入和财富, 自尊的基础──都要平等地分配, 除非对其中一种或所有价值的不平等分配合乎每一个人的利益. 
+
+> "除非对其中一种或所有价值的不平等分配合乎每一个人的利益":
+>
+> i.e. 德高望重者所收获的被尊重的权力
 
 ### 2.1.2. 两个正义原则
 
 1. 第一个正义原则是每个人对与所有人所拥有的最广泛平等的基本自由体系相容的类似自由体系都应有一种平等的权利( **平等自由原则** ). 
-   1. 每个人都享有平等的基本自由, 主要包括政治自由, 言论自由, 信仰自由, 人身自由, 财产权保障, 法治下的自由等, 而且...
+    > 基本权利的是指是基本自由 → 对基本权力的分配本质是对基本自由的分配
+   1. 每个人都享有平等的 **基本自由** , 主要包括政治自由, 言论自由, 信仰自由, 人身自由, 财产权保障, 法治下的自由等, 而且...(⬇)
    2. 所享有的基本自由尽可能广泛. 
 2. 第二个正义原则是, 社会的和经济的不平等应这样安排( **差别待遇原则** ), 使它们: 
-   1. 在与正义的储存原则相一致的情况下, 对处于社会最不利地位的人是最有利的( **差别原则** )；
+   1. 在与正义的储存原则相一致的情况下, 对处于社会最不利地位的人是最有利的( **差别原则** ); 
+      > 对处于社会地位中最不利的人是最有利的. 对于处于社会最不利地位的人给予最多的帮助
+      > 
+      > > **对不利地位的人**
+      > > 
+      > > 既没有能力, 有没有经济条件
+      > 
+      > 这是否就是 **平等分配** 的意思?
+      > 
+      > A: 不是
+      > 
+      > > Explain: 
    2. 依系于在机会公平平等的条件下, 职务和地位向所有人开放( **机会的公平平等原则** ).  
+      > 平等地开放: 获得某一职务或地位的机会应该是以一致的, 取得它的机会是相同的.
+      > 
+      > 公平地开放: 获得某一职务或地位的机会应该是对所有人一样的, 实现它的难度是一样的
+
+> 第一个原则: 基本自由的分配 → 平等地分配
+> 
+> 第二个原则: 不平等的分配如何分配
+> - 两个子原则:
+>   - 对职位和地位的分配 → 机会公平平等原则
+>   - 对财富经济条件的分配 → 差别原则
 
 ### 2.1.3. 两个优先规则
 
@@ -114,12 +161,28 @@
 #### 2.2.1.1. 契约论
 
 > 订立一个有关正义观念和原则的契约. 
+>
+> 契约的核心就是 **同意** 的原则
 
 罗尔斯的契约论与古典自然法学的社会契约论. 
 
 正义的基础是同意, 而非强制. 
 
+> 同意赋予 **占有** 以意义, 以正义
+>
+> 同意赋予 **行为** 以意义, 以正义
+>
+> 甚至: 同意赋予 **政权** 以意义, 以正义
+
 什么样的同意?
+
+> 欺骗的状态下的 "同意" 是有效的吗?
+> 
+> > 诈骗的状态获得了受害者的同意, 但是这个同意必不是正义的
+> 
+> 由此, 需要给予同意以条件: 
+> 
+> ...
 
 #### 2.2.1.2. 原初状态
 
@@ -127,8 +190,12 @@
 
 原初状态与古典自然法学的"自然状态". 
 
+> 原初状态是一个自然的状态, 是不受法律约束的状态.
+>
+> i.e. 议会中的发言就是一个原初状态下的发言
+
 同意的条件: 
-1. 人们的讨论和同意受制于既有的法律制度；
+1. 人们的讨论和同意受制于既有的法律制度; 
 2. 人们的讨论和同意不受制于任何既有的法律制度. 
 
 #### 2.2.1.3. 无知之幕
@@ -136,16 +203,22 @@
 > 处于原初状态的人们选择用以指导社会的正义观和原则的环境和条件. 
 
 讨论和给出同意的条件: 
-1. 信息完全透明: 人们知道一般信息和特殊信息. 
-2. 信息半透明: 人们知道一般信息, 不知特殊信息(无知之幕). 
+1. **信息完全透明** : 人们知道一般信息和特殊信息. 
+2. **信息半透明** : 人们知道一般信息, 不知特殊信息(无知之幕). 
 
----
+什么是一般信息和特殊信息?
 
 **一般信息**
 
-1. 社会的一般原理, 例如各种正义观或正义原则的备选方案等；
-2. 社会多元和多样化的事实, 例如人们在天赋, 社会出身, 宗教信仰, 心理特征等方面存在广泛的差异；
+1. 社会的一般原理, 例如各种正义观或正义原则的备选方案等; 
+2. 社会多元和多样化的事实, 例如人们在天赋, 社会出身, 宗教信仰, 心理特征等方面存在广泛的差异; 
 3. 人性的特征: 理性和相互冷淡的个体. 
+   > 理性: 知道去用最高的手段去实现自己的最大化的利益
+   > 
+   > 相互冷淡: 通过衡量自己的所得与所失去衡量自己的幸福的本身的状态, 而不是通过对别人的所得与所示来获得幸福的本身. 
+   > > 当然这不是对熟人社会个人的描述, 而是适用于 **陌生社会** 的描述, 对商业社会中的个人的描述.
+   > > 
+   > > i.e. 熟人社会中的权力的如何分配的问题是基于例如家庭的"爱"的原则
 
 **特殊信息**
 
@@ -158,15 +231,23 @@
 
 这是一个合理的条件吗?
 
+> 如果一个人知晓所有的特殊条件, 那这个时候就不会是有公平公正的正义的存在了, 人们会根据自己的特殊条件来选择符合自己利益的判断与行为.
+>
+> 无知之幕是契约的条件是合理, 但是在现实社会中, 这种的无知之幕的信息均衡的"无知"是不符合的, 人们需要去尽量去了解所想要去了解之物才能避免自己处于 **信息的弱势** 的状态中. 这个条件是理想的是符合人群对正义的追求的定义中的
+
 #### 2.2.1.4. 正义的环境
 
 正义的环境是指人们选择正义原则的主客观的环境条件. 
 
-客观条件: 资源处于中等程度的匮乏状态. 
+客观条件: 资源处于 **中等程度的匮乏** 状态. 
 
 主观条件: 人性的两个特征. 
 1. 理性: 个人效用最大化
 2. 相互冷淡: 一般既不热情推进也不恶意妒忌他人的利益.  
+
+> 只有由以上两种人性的基本特征的人群才会去讨论资源与自由的平均分配的正义的问题. 
+>
+> 且不时发生在熟人社会中, 而是发生在一个陌生社会, 甚至是一个以国家为单位的陌生社会中.
 
 ### 2.2.2. 过程(选择正义原则的过程)
 
@@ -181,13 +262,19 @@
 
 |  | A方案 | B方案 | C方案 | 平均主义方案 |
 | :-: | :-: | :-: | :-: | :-: |
-| 最大值 | 100 | 88 | 80 | X1 |
-| 最小值 | 0 | 7 | 10 | X2(X1 = X2) |
-| 总和值 | 100 | 95 | 90 | X1 + X2 |
+| 最大值(条件最好者) | 100 | 88 | 80 | X1 |
+| 最小值(条件最差者) | 0 | 7 | 10 | X2(X1 = X2) |
+| 总和值(社会总财富) | 100 | 95 | 90 | X1 + X2 |
 
 以此图表说明差别原则的选择过程. 
 
-理性选择理论: 在不确定情况下, 人们的选择会遵循最大的最小值规则
+理性选择理论: 在不确定情况下, 人们的选择会遵循 **最大的最小值** 规则
+
+> 所以针对上面图表的状态中, 结局会被选择的是C方案, 即使它带来的社会总财富, 效率不是最高的选择
+>
+> > Q. 这个情况下为什么社会的总财富会是最小的呢
+> > 
+> > A. 因为这个状态下社会财富的创造的动力是最大的, 且这个情况下条件最好者获得最多的资源, 他们会去创造更多的财富, 从而使得社会的总财富增加.
 
 ---
 
@@ -221,9 +308,9 @@
 
 ### 2.2.4. 四个序列
 
-1. 第一步, 人们在原初状态中选择正义观和正义原则；
-2. 第二步, 人们根据所选择的正义观和正义原则制定宪法；
-3. 第三步, 人们根据宪法制定法律；
+1. 第一步, 人们在原初状态中选择正义观和正义原则; 
+2. 第二步, 人们根据所选择的正义观和正义原则制定宪法; 
+3. 第三步, 人们根据宪法制定法律; 
 4. 第四步, 人们在社会生活中把宪法和法律规范付诸实施. 
 
 # 3. 诺齐克的正义理论
