--- a/Human right and laws/CH10 人权中的正义.md
+++ b/Human right and laws/CH10 人权中的正义.md
@@ -100,7 +100,7 @@
 
 ![John Rawls](http://t1.gstatic.com/licensed-image?q=tbn:ANd9GcTGhJLeviV7SKeiPjmlADUuPKZ-9POsMhbeOwKYR9MvXMAGg8U1jM44VxIOOd6JvSpL0RDpwmeFD4HHZ_E)
 
-约翰·罗尔斯(1921－2002), 生前是美国哈佛大学哲学系教授, 著名哲学家, 著有《正义论》和《政治自由主义》等书. 
+约翰·罗尔斯(1921-2002), 生前是美国哈佛大学哲学系教授, 著名哲学家, 著有《正义论》和《政治自由主义》等书. 
 
 # 2. 罗尔斯的正义理论
 
@@ -292,11 +292,35 @@
 2. 社会出身: 家庭背景和社会经济地位. 
 3. 个人努力: 有意识的付出和勤奋. 
 
+> 以上三者对都是主要因素, 但是他们的影响程度是不同的.
+>
+> > **自然天赋** , **社会出身** , 不是个人的努力所能决定的因素, 所以这两者都是偶然因素.
+> > - 自然天赋: 影响资源分配的自然的偶然因素
+> > - 社会出身: 影响资源分配的社会的偶然因素
+> > 
+> > 对应的一般认为 **个人努力** 是个人可以决定和控制的因素
+
 偶然因素是指个体不能选择, 决定或控制的因素, 包括自然的和社会的偶然因素. 
 
 ---
 
+对待偶然因素的态度和观点: 
+
+1. 不抑制或强化 (+)
+2. 抑制 (-)
+
+1. 制度A(+, +): 不节制自然禀赋和社会出身在分配体系中的影响力. 
+2. 制度B(-, +): 这一制度要节制自然禀赋在分配体系中的影响力, 但是不抑制或加强社会出身的影响力. 
+3. 制度C(+, -): 这一制度不节制自然禀赋在分配体系中的影响力, 但是节制社会出身在分配体系中的影响力. (节制社会出身影响力的例子: 遗产税)
+4. 制度D(-, -): 这一制度既节制自然禀赋也节制社会出身在分配体系中的影响力. 
+
+---
+
 罗尔斯: "允许分配的份额受到这些从道德观点看是非常任性专横的因素的不恰当影响", 是不正义的. 因此应当把"把天赋的分布看作是在某种意义上的一种共同资产, 可以共享由这种天赋分布的互补性所带来的较大社会和经济利益. " (《正义论》2009年版中译本第78页)
+
+> 由于天赋是偶然的因素, 所以天赋的发挥应该有利于社会的进步, 天赋的因素不能完全和社会的资源的分配成为完全正相关的关系; 同理的, 对于社会出身的因素也是如此.
+>
+> 由此便得到了两个正义原则, 也就是 **机会公平平等原则** 和 **差别原则** .
 
 在契约程序中, 人们对偶然因素的认识使他们选择了第二组正义原则. 
 
@@ -304,18 +328,20 @@
 
 ### 2.2.3. 结论(选择的结果: 得出正义)
 
-在诸多的备选方案之中, 人们一致选择了 "一般正义观", "两个正义原则"和"两个优先规则" . 
+在诸多的备选方案之中, 人们一致选择了 "一般正义观", "两个正义原则"和"两个优先规则". 
 
 ### 2.2.4. 四个序列
 
 1. 第一步, 人们在原初状态中选择正义观和正义原则; 
+   > 达成正义之约
 2. 第二步, 人们根据所选择的正义观和正义原则制定宪法; 
+   > 正义之约高于宪法
 3. 第三步, 人们根据宪法制定法律; 
 4. 第四步, 人们在社会生活中把宪法和法律规范付诸实施. 
 
 # 3. 诺齐克的正义理论
 
-诺齐克(Robert  Nozick, 1938-2002), 20世纪著名哲学家和思想家, 著有《无政府, 国家和乌托邦》》(1974), 《哲学解释》(1981), 《合理性的本质》(1993)等书
+诺齐克(Robert  Nozick, 1938-2002), 20世纪著名哲学家和思想家, 著有《无政府, 国家和乌托邦》(1974), 《哲学解释》(1981), 《合理性的本质》(1993)等书
 
 ## 3.1. 两个基本观点
 
