--- a/Human right and laws/CH10 人权中的正义.md
+++ b/Human right and laws/CH10 人权中的正义.md
@@ -326,18 +326,23 @@
 
 德沃金(R. Dworkin): 正义的资源分配应钝于天赋, 而敏于志向. (德沃金: 《至上的美德: 平等的理论与实践》, 冯克利译, 译林出版社2003年版, 第二章"资源平等".)
 
+> - 钝于天赋
+> > 有多大的志向, 为此付出多大的努力, 就应该得到多大的社会的反应.
+> - 敏于志向
+> > 有多大的天赋或者社会出身, 但这不不应该就等同于他所获得的社会的反应. 
+
 ### 2.2.3. 结论(选择的结果: 得出正义)
 
 在诸多的备选方案之中, 人们一致选择了 "一般正义观", "两个正义原则"和"两个优先规则". 
 
 ### 2.2.4. 四个序列
 
-1. 第一步, 人们在原初状态中选择正义观和正义原则; 
+1. 第一步, 人们在原初状态中选择正义观和正义原则
    > 达成正义之约
-2. 第二步, 人们根据所选择的正义观和正义原则制定宪法; 
+2. 第二步, 人们根据所选择的正义观和正义原则制定宪法
    > 正义之约高于宪法
-3. 第三步, 人们根据宪法制定法律; 
-4. 第四步, 人们在社会生活中把宪法和法律规范付诸实施. 
+3. 第三步, 人们根据宪法制定法律
+4. 第四步, 人们在社会生活中把宪法和法律规范付诸实施
 
 # 3. 诺齐克的正义理论
 
@@ -346,36 +351,60 @@
 ## 3.1. 两个基本观点
 
 个人: 自我所有权, 个人对自己, 包括自己的天赋, 拥有所有权. 
+> 诺齐克与洛克一样认为对自我的所有权是个人的起点, 这是应完全属于个人的东西.
 
 国家: 最弱意义的国家是唯一能够得到正当化证明的国家. 正义源于同意. 
+> 诺斯克认为国家不应该负担太多的只能, 超出最弱意义的四个只能的国家都是不正义的.
 
 ## 3.2. 对罗尔斯正义论的主要批评
 
 诺齐克认同罗尔斯的第一正义原则, 反对其第二正义原则. 
+> 他仅认同基本平等自由原则, 即对基本权力的分配本质是对基本自由的分配
 
 1. 如果人的天赋在道德上是任意的, 偶然的, 在资源分配中是应予排除其影响力的, 那么人的一切特征都是任意的, 偶然的, 都应予排除的. 显然这是不可能的. 
+   > 反驳: 如果天赋是偶然因素, 但是实际上人的所有的一切特征都是来自于自然的偶然的. 人的出生就是一个偶然的事件, 如果人的天赋是偶然的, 那么所有人的所有努力的得来的结果都需要进行分配, 而这是不公平的; 懒惰与努力也是来源于基因决定的 "自然的偶然因素"
+   > 
+   > 结论: 偶然因素的排除是不合理的, 是荒谬的, 是不现实的. 而是应该限制偶然因素带来优势的条件进行的对他人的损害, 而除此之外的偶然因素的发挥应该是任由的. 
 2. 罗尔斯的第二正义原则是模式化原则, 不关注资源是如何来的, 仅仅关注资源在当下如何分配. 
+   > 反驳: 这个关注的点是切除来历史的因素, 社会财富的来源是历史的, 当用社会财富来源的历史进行分配. 
 
 ## 3.3. "持有正义理论"
 
 诺齐克提出"持有正义理论", 坚持一种所谓正义的"历史原则": 
+> 对持有的任何东西(holdings)进行正义与否进行讨论, 关注持有的事物从何而来
 
 1. "获得的正义": 最初的持有必须来源清白, 不得来自强权掠取或诈骗. 
+   > i.e. 对自然资源进行生产而产生的财富就是 "获得的正义" 是正义的
 2. "转让的正义": 持有的每一次转让与交易也都是自由, 公正的, 没有强权或欺诈介入. 
 3. "矫正的正义": 持有的正义必须是可以追溯的完整链条, 只要其中一环是不正义的, 则此后即使每次交易都合乎公正, 其结果也不正义. 
 
-
-诺齐克认为, 只要符合这三个原则, 某个人对其所持有的任何东西(财富, 名誉, 地位,  **才能** 等)都是正义的. 
+诺齐克认为, 只要符合这三个原则, 某个人对其所持有的任何东西(财富, 名誉, 地位,  才能 等)都是正义的. 
+> 不一定是财富才是持有, 也可以是地位, 名誉, 才能等等
+>
+> 由此: 
+> > 天赋:
+> > > 如何获得的?
+> > > 
+> > > 不会是通过强权掠取, 也不会是通过欺诈来获得, 才能的获得是不可能通过暴力或者欺骗的手段来获得, 一个人的才能也不可能通过盗窃, 偷窃来获得的. → 不可能是不正义的 → 对才能的持有就是正义的 → 由此便可以通过才能来获得财富 → 也就是这个才能获得的社会财富是可以的, 但是对于获得的才能是否是正义的, 就又通过三个原则进行过判断, 如果通过了这些的原则就可以认为是正义的.
 
 ## 3.4. 社会的乌托邦结构和对弱者的救助
 
 1. 不幸与不正义的区分. 
+   > - 不幸: 命运的安排下的不幸. 
+   > - 不正义: 他人的侵权行为所造成的损害.
+   > 
+   > 诺齐克认为, 人们的不幸是不可避免的, 但是国家应该去阻止不正义的行为的发生, 阻止侵权行为造成给的损害. 如果国家需要去帮助不幸的命运的安排, 那么必然需要征收更多的税等的行为以取得财富, 以帮助不幸的人, 而这个取得的本身就是不正义的. 
 2. 当国家最小化时, 社会呈现出拥有宽广空间的乌托邦结构, 人们尽可以按照自己的意愿去实践自己的人生. 具有慈善心的人们可以自发去帮助弱者. 
 
 # 4. 若干需要进一步讨论的问题
 
 若干需要进一步讨论的问题: 
 
-1. 偶然因素与自由意志是什么关系, 在人生前景的决定因素中占有什么比重?
-2. 国家制度化协助与社会弥散性协助, 哪一种具有较好的效果?
-3. 仅有自我所有权, 而不借助社会合作体系, 就能够实现个人的计划和抱负吗?
+1. 如何从人的主体性的角度去认识偶然因素导致的后果责任? 
+   > 主体责任, 一个人只应该为自己所能控制的改变的行为去承担责任, 而不应该为自己不能辨认, 控制的行为承担后果. 这是行为的主体性. 
+   > 
+   > i.e.
+   > - 精神病患者
+   > -  
+2. 国家制度化协助与社会弥散性协助, 哪一种具有较好的效果? 
+3. 仅有自我所有权, 而不借助社会合作体系, 就能够实现个人的计划和抱负吗
