--- a/Human right and laws/CH11  权利与功利.md
+++ b/Human right and laws/CH11  权利与功利.md
@@ -224,6 +224,7 @@ $$
 权利原则与功利原则并非水火不相容, 一项政府措施应当谨慎设计以同时符合两个原则 . 
 
 对于某种制度安排, 如果不能确保会带来更大的社会效益, 还倾向于人权保障较为妥当. 
+> 因为功利主义是面向未来的, 是具有不确定性的, 而权利主义是面向现在的, 是确定的.
 
 ## 5.1. 讨论: 扳道工的故事
 
