--- a/Human right and laws/CH14 人权的限制与协调发展.md
+++ b/Human right and laws/CH14 人权的限制与协调发展.md
@@ -94,12 +94,17 @@
 1. **主观条件**: 冒犯行为人具有通过冒犯行 对被冒犯者的精神施加伤害的故意. 
 2. **客观条件**: 冒犯行为已经导致或极有可能导致发生侵害他人权利或自身权利、或者危害公共利益的事态. 
 
+> Q1. sid and his NAZI T-shirt. 
+>
+> Q2. 在sex pistols在泰晤士河上完成God save the queen的演出之后, 被打. johnny rotten的脸就是使他 "极有可能导致发生侵害自身权利" 的本身. 冒犯行为完成之后的冒犯者本身. 
 ## 2.2. 限制的原则
 
 ### 2.2.1. 比例原则
 
+> 政府对权利的限制要符合一定比例, 不能超过一定的限制. 
+
 1. 适当性原则, 又称目的性原则. 国家机关采取的限制措施必须能够达到所希望达到的目的, 例如保护他人权利、促进公共利益或保护权利人自己的权利. 
-2. 必要性原则, 又称最少侵害原则. 在一切适当的、能够达到目的的措施中必须选择对当事人权利限制最小的那一个. 
+2. 必要性原则, 又称最少侵害原则. 在一切适当的、能够达到目的的措施中必须选择对当事人权利 **限制最小** 的那一个. 
 3. 狭义比例原则, 又称均衡原则. 不能为了达成很小的目的而严重限制人民的权利. 也就是说, 即使某个限制措施能够达到目的, 但是如果会导致基本权利受到过于严重的限制, 也不能采取这一限制措施
 
 ### 2.2.2. 平等原则
@@ -118,6 +123,8 @@
 三个现实问题: 
 
 强行拆迁是否可以? 如果可以, 要符合什么条件(目的和原则)? 计划生育是否违背人权? 
+
+> Q. 如果比如征用一些老人的房屋旁边的土地去进行建设公路(噪音), 但是这些老人从来不会去使用这些公路, 这个情况下他并没有从公共权益中收益, 如果说他们可以从土地的经济效益上获益, 那么如果该新建的公路由于过于偏僻而没有实际的经济价值或者说在老人在世的时候是没有实现实际的盈利或者获益的, 这个情况下, 对这个道路的建设的本身对实际的公共利益的促进不就是有疑问的了吗? 另外, 如果说是长远的未来的潜在的不能被确定的价值是需要被考虑的, 那么这个情况下与计划生育进行对比, 比如说如果因为计划生育而造成的人群的生育的欲望的降低, 或者说是在长远上表现得是人口的老龄化等的问题, 这个情况下, 计划生育的本身不就需要被注意的是它的长远的潜在的负面的价值吗? 如果认可否定, 潜在的, 不被确定的负面价值的情况下, 这样的负面的价值能否去对计划生育进行否定呢? 
 
 ## 2.3. 疫情防控: 人权的限制与保障
 
@@ -160,3 +167,7 @@ Roe v. Wade (1973)
 尽管从医学角度来看该判例在三个阶段的划分上也许存在问题, 但是它富有启发性地表明, 对权利之间、权利与公共利益之间的对立冲突问题不应简单地支持或禁止某一方的存在, 而是加以适当的协调, 促进它们共同均衡发展
 
 2022年6月24日, 美国最高法院以6: 3在多布斯诉杰克逊妇女健康组织(Dobbs v. Jackson Women’s Health Organization)案件中推翻了1973年罗伊诉韦德案判例, 将堕胎立法从联邦政府的管辖事项改为各州各自决定的事项. 最高法院没有禁止堕胎, 只是认为堕胎并非联邦宪法问题, 是否允许堕胎、在什么条件下允许堕胎应该由各州决定
+
+> 胎儿时期神经系统发育最早，尤其是脑的发育最为迅速。原始神经胚在胚胎3-4周就已经形成；前脑发育在胚胎2-3月；神经元增殖主要在胚胎3-4月；胚胎3-5月开始神经元的移行；从胚胎5个月一直到出生后数年脑细胞都在增殖分化；出生前后到生后数年神经细胞的突触和神经纤维以及髓鞘逐渐发育成熟
+> 
+> 唯一冲突应该是生命权与自由权的谁应该优先的问题. 
