--- a/Human right and laws/CH14 人权的限制与协调发展.md
+++ b/Human right and laws/CH14 人权的限制与协调发展.md
@@ -169,7 +169,7 @@ Roe v. Wade (1973)
 
 2022年6月24日, 美国最高法院以6: 3在多布斯诉杰克逊妇女健康组织(Dobbs v. Jackson Women’s Health Organization)案件中推翻了1973年罗伊诉韦德案判例, 将堕胎立法从联邦政府的管辖事项改为各州各自决定的事项. 最高法院没有禁止堕胎, 只是认为堕胎并非联邦宪法问题, 是否允许堕胎、在什么条件下允许堕胎应该由各州决定
 
-> 胎儿时期神经系统发育最早，尤其是脑的发育最为迅速。原始神经胚在胚胎3-4周就已经形成；前脑发育在胚胎2-3月；神经元增殖主要在胚胎3-4月；胚胎3-5月开始神经元的移行；从胚胎5个月一直到出生后数年脑细胞都在增殖分化；出生前后到生后数年神经细胞的突触和神经纤维以及髓鞘逐渐发育成熟
+> 胎儿时期神经系统发育最早, 尤其是脑的发育最为迅速. 原始神经胚在胚胎3-4周就已经形成; 前脑发育在胚胎2-3月; 神经元增殖主要在胚胎3-4月; 胚胎3-5月开始神经元的移行; 从胚胎5个月一直到出生后数年脑细胞都在增殖分化; 出生前后到生后数年神经细胞的突触和神经纤维以及髓鞘逐渐发育成熟
 > 
 > 唯一冲突应该是生命权与自由权的谁应该优先的问题. 
 
