--- a/Human right and laws/CH15 人权保障的条件和体系.md
+++ b/Human right and laws/CH15 人权保障的条件和体系.md
@@ -33,7 +33,7 @@
 
 ## 社会组织、个人
 
-1. 不侵犯他人权利的义务；
+1. 不侵犯他人权利的义务; 
 2. 在一定条件下协助他人实现权利的义务. 
 
 ## 国际组织
@@ -109,33 +109,76 @@
 
 人权的组织保障是指, 人们团结起来, 结成一定的组织, 可以更好地保障人权. 
 
+> 需要人民结社的自由的保障的前提. 
+>
+> 个人既是个人也是公民
+>
+> - 作为个人, 个人关注自我的权力的保障与实现. 
+> - 作为公民, 个人关注公共利益的保障与实现.
+
 1. 就人权保障的条件而言, 组织保障是人权保障的条件之一. 人权保障需要集体的力量. 
 2. 就人权保障的方式而言, 组织保障是人权保障的方式之一. 在争取某项权利的时候, 在与某种侵害行为进行抗争的时候, 人们团结起来, 有相同诉求或相同境遇的人结成一定的组织, 采取集体行动, 更有利于保障人权. 
+    > 如果由于政策的限制使得人民无法自由地结成一个组织, 那么是不利于权利的保障的. 
 
 ## 人权的物质保障
 
 1. 就人权保障的条件而言, 经济发展是人权保障的重要条件. 
    1. 个人: 其经济力量影响着许多权利的保障水平或实现程度. 
-   2. 国家 : 社会经济发展水平直接影响着国家保障人权的能力. 
-2. 就人权保障的方式而言, 发展经济是人权保障的重要方式.  
+        > 人权保障主要是依靠权利人自己. 
+   2. 国家: 社会经济发展水平直接影响着国家保障人权的能力. 
+        > 经济发展与人权保障是相互促进的, 如果可以切实保障每一个人的财产权, 个人去创造财富的积极性就会提高, 从而促进经济发展; 同样的, 如果经济发展, 人们的生活水平提高, 人们的人权意识也会提高, 从而促进人权保障. 
+        > 
+        > 根本上来说, 人权保障是经济发展的最终目的. 
+2. 就人权保障的方式而言, 发展经济是人权保障的重要方式.
 
 ## 人权的民主保障
 
 民主可以在多个层面上来理解. 它不仅是一系列权利, 而且是一种政治体制. 
 
-1. 就人权保障的条件来说, 民主是人权保障的重要条件. 
-2. 就人权保障的方式来说, 实行民主, 有序推进落实人们广泛的民主权利, 有利于保障人权. 
+> **民主**, 是一套与政治生活有关的一系列权利, 包括选举权、被选举权、言论自由、结社自由、集会自由、游行示威自由、罢工自由、知情权、参政权等. 是建立在人民的同意和满意的前提下的. 
 
-## 人权的法律保障
+1. 就人权保障的条件来说, 民主是人权保障的重要条件. 
+    > 当然再不民主的国家也存在人权保障较好的情况, 但是这样的情况是少数的, 是特例的, 是不长久的. 
+2. 就人权保障的方式来说, 实行民主, 有序推进落实人们广泛的民主权利, 有利于保障人权. 
+    > 民主是为人权服务的, 人权是民主的目的. 
+
+## 人权的法律保障/法制保障
 
 1. 法律是人权保障的重要条件. 
    1. 法律是一种具有普遍效力、较为稳定的正式制度. 
    2. 法律是一种具有特殊强制性和专门实施机制的制度. 
+        > 即, 当权利制订成了法律, 就有了较为稳定的, 以及强制性的实施的保障. 
 2. 法律是人权保障的重要方式. 无论是在国内层面上还是在国际层面上, 都应当以法律作为人权保障的手段, 在法律中承认和规定人权, 并采取一定的法律机制去落实人权. 
 3. 法治与人权
+    > 法治与法律是不同的. 法治是一种政治理念, 法律是一种具体的制度.
+    >  
     > 法治的核心内涵是指国家依照既定的、公开的普遍性法律行使权力与管理公共事务, 国家权力受到法律制约, 公民的自由和权利受到法律的保障. 
     > 
     > 法治意味着, 
     > 
-    > 1. 对国家机关而言, 法律未授予的就是禁止的, 国家机关不能行使没有法律根据或者不受法律制约的权力（法无授权不可为）；
-    > 2. 对公民而言, 法律未禁止的就是允许的, 公民就自己的行为接受社会的道德评价, 但是不接受国家机关的强制性惩罚（法无禁止即自由）. 
+    > 1. 对国家机关而言, 法律未授予的就是禁止的, 国家机关不能行使没有法律根据或者不受法律制约的权力 **(法无授权不可为)**; 
+    > 2. 对公民而言, 法律未禁止的就是允许的, 公民就自己的行为接受社会的道德评价, 但是不接受国家机关的强制性惩罚 **(法无禁止即自由)**. 
+
+法治的思想是具有革命性的, 再过去是: 将人民关在笼子内, 而统治者在笼子外, 但是现在是: 将统治者, 国家关在笼子内, 而人民在笼子外.
+
+### 法制的原则:
+
+1. **实质性原则**: 法治的实质性原则是法律的内容应当符合一些价值准则, 法律应当成为"良法".  
+2. **形式性原则**: 法治的形式性原则主要指为实行法治所必需的法律制度及其运行的程序要件. 
+   - **一般性**: 法律具有一般性, 适用于不特定的对象; 
+        > 但是具有针对特定的人群, 群体, 但是它们再对于这个群体依旧是一般性的.
+        > 
+        > i.e: 妇女权益保障法, 老年人权益保障法等.
+   - **公开性**: 法律应当公布, 晓之于民众; 
+   - **可能性**: 法律要求人们做的事情必须是人们可能做到的事情; 
+   - **明确性**: 法律必须明确, 尽可能避免含混不清; 
+        > 法律无法做到完全的明确, 但是立法者需要尽可能的明确, 不能故意含混不清.
+   - **稳定性**: 法律应当具有一定的稳定性, 不能变动过于频繁; 
+   - **内在和谐**: 法律应当尽量减少内在矛盾或冲突; 
+        > 同样的, 法律也无法做到完全的内在和谐, 但是立法者需要尽可能的减少内在矛盾或冲突.
+   - **不溯既往**: 法律一般不应适用于生效前的事件和行为; 
+        > 特定情况下, 法律可以溯往, 
+        > 
+        > i.e. "从旧兼从轻": 如果某个新的法律是相当于旧法对于某个行为是轻判的, 那么这个新法律可以溯往, 而不应该依据旧法来判决.
+   - **依法阐释**: 国家机关在实施法律的过程中必须根据法律的原则和精神阐释法律; 
+   - **有法必依**: 国家机关的行为必须与法律规定相一致. 
